--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
 
                         <button
                             class="bg-blue-500 px-4 py-2 font-semibold text-white inline-flex items-center space-x-2 rounded">       
-                            <a href="callbacks.html">Callback</a>
+                            <a href="src/callbacks.html">Callback</a>
                         </button>
                         <button
                             class="bg-red-500 px-4 py-2 font-semibold text-white inline-flex items-center space-x-2 rounded">
-                            <a href="promises.html">Promises</a>
+                            <a href="src/promises.html">Promises</a>
                         </button>
                         <button
                             class="bg-pink-600 px-4 py-2 font-semibold text-white inline-flex items-center space-x-2 rounded">
 
-                            <a href="async.html">Async/Await</a>
+                            <a href="src/async.html">Async/Await</a>
                         </button>
                     </div>
                 </div>
