--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <!--HEADER SECTION-->
     <header class="w-full flex justify-center ">
         <nav class="w-11/12 flex gap-3 rounded-2xl flex-col md:flex-row items-center justify-between text-cyan-50 my-3 p-3 md:rounded-full"
             id="nav-section">
@@ -26,7 +27,8 @@
             <h1 class="bg-white rounded-full p-3 font-bold title text-lg sm:text-2xl">HOME Page</h1>
         </nav>
     </header>
-
+    
+    <!--MAIN SECTION-->
     <main class="w-full flex justify-center min-h-screen">
         <section id="main-section"
             class=" my-3 bg-slate-800 w-11/12 min-h-screen py-4 rounded-3xl flex flex-col justify-between flex-wrap" style="background-image: url('https://images.unsplash.com/photo-1662763998589-d276a91e3b24?q=80&w=1856&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
@@ -59,6 +61,8 @@
             </div>
         </section>
     </main>
+
+    <!--FOOTER SECTION-->
 
     <footer class="w-full flex justify-center">
         <div class="w-11/12 flex gap-3 rounded-2xl flex-row items-center justify-center text-cyan-50 my-3 p-3 md:rounded- bg-cover"
