--- a/src/callbacks.html
+++ b/src/callbacks.html
@@ -15,6 +15,7 @@
     <title>Callbacks</title>
 </head>
 <body>
+    <!--HEADER SECTION-->
     <header class="w-full flex justify-center ">
         <nav class="w-11/12 flex gap-3 rounded-2xl flex-col md:flex-row items-center justify-between text-cyan-50 my-3 p-3 md:rounded-full"
             id="nav-section">
@@ -25,6 +26,7 @@
         </nav>
     </header>
 
+    <!--MAIN SECTION-->
     <main class="w-full flex justify-center">
         <section id="main-section" class=" my-3 bg-slate-800 w-11/12 min-h-screen py-4 rounded-3xl flex justify-between flex-wrap" >
             <div class=" flex w-full justify-center items-center flex-col text-white">
@@ -35,6 +37,7 @@
         </section>
     </main>
 
+    <!--FOOTER SECTION-->
     <footer class="w-full flex justify-center">
         <div class="w-11/12 flex gap-3 rounded-2xl flex-row items-center justify-center text-cyan-50 my-3 p-3 md:rounded- bg-cover"
             id="footer-section">
@@ -49,13 +52,15 @@
     </footer>
 
     <script>
+        
         const maindiv = document.querySelector('#maindiv');
         const callback = document.querySelector('#callback-btn');
-        var alreadymessagepresent = false;
+
+        var alreadymessagepresent = false; //this checks if fetch data is already present there
 
         callback.addEventListener('click', fetchinfo);
 
-
+        //Callback function
         function displayinfo(message){
             const infodiv = document.createElement('div');
             infodiv.classList.add('content');
@@ -64,22 +69,26 @@
             alreadymessagepresent =true;
         }
 
+
         function fetchinfo(){
             if(alreadymessagepresent){
                 console.log('code running');
-                document.querySelectorAll('.content').forEach(e => e.remove());
+                document.querySelectorAll('.content').forEach(e => e.remove()); //if fetch data is already available in div element it will first remove the previous data before updating the new data
             }
+
+
+            const infodiv = document.createElement('div');
+            infodiv.innerHTML = 'Callback Executed after 5 seconds';//Text in the div element to display 
+            maindiv.appendChild(infodiv);
 
             fetch('https://dummyjson.com/posts')
             .then(response => response.json())
             .then(data => data.posts)
             .then(arr => setTimeout(()=> {
-                arr.map(x => displayinfo(x.title));
+                infodiv.remove();
+                arr.map(x => displayinfo(x.title));//its going to display all the title inside posts array
             },5000));
         }
-
-        
-
 
     </script>
 </body>
