--- a/src/promises.html
+++ b/src/promises.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <!--HEADER SECTION-->
     <header class="w-full flex justify-center ">
         <nav class="w-11/12 flex gap-3 rounded-2xl flex-col md:flex-row items-center justify-between text-cyan-50 my-3 p-3 md:rounded-full"
             id="nav-section">
@@ -27,6 +28,7 @@
         </nav>
     </header>
 
+    <!--MAIN SECTION-->
     <main class="w-full flex justify-center">
         <section id="main-section"
             class=" my-3 bg-slate-800 w-11/12 min-h-screen py-4 rounded-3xl flex justify-between flex-wrap">
@@ -38,6 +40,7 @@
         </section>
     </main>
 
+    <!--FOOTER SECTION-->
     <footer class="w-full flex justify-center">
         <div class="w-11/12 flex gap-3 rounded-2xl flex-row items-center justify-center text-cyan-50 my-3 p-3 md:rounded- bg-cover"
             id="footer-section">
@@ -60,6 +63,8 @@
 
         callback.addEventListener('click', fetchinfo);
 
+
+        //MAIN FUNCTION 
         function fetchinfo() {
 
             if(alreadymessagepresent){
@@ -92,19 +97,19 @@
             //     },5000)
             // });
 
-            const result = fetch('https://dummyjson.com/posts');
+            const result = fetch('https://dummyjson.com/posts'); //FETCHING DATA
             const infodiv = document.createElement('div');
             infodiv.innerHTML = 'Loading ...'
             maindiv.appendChild(infodiv);
 
 
-            const rejection = new Promise((resolve, reject) => {
+            const rejection = new Promise((resolve, reject) => { //FETCHING REJECT MESSAGE
                 setTimeout(() => {
                     reject(new Error('Operation timed out.'));
                 }, 5000)
             })
 
-            Promise.any([result, rejection])
+            Promise.any([result, rejection]) //ANY DATA WHICH IS RESOLVED WILL BE PROVIDE OUTPUT AS RESOLVED
                 .then(response => response.json())
                 .then(data => {
                     infodiv.remove();
@@ -122,7 +127,7 @@
                     
                 })
                 .catch((err) => {
-                    infodiv.innerHTML = 'Operation timed Out';
+                    infodiv.innerHTML = 'Operation timed Out'; //ERROR DISPLAYING
                 });
 
         }
